AAE-19112 Start using Generational ZGC in AAE (#1702)